@@ -28,6 +28,39 @@ init()
     boolean
 
 
+checkConfiguration()
+  This method is called whenever the connector configuration needs to be checked.
+  It is typically called by the :php:`query()` method, but can also be called
+  by third-party code. It receives the list of connector parameters as an input
+  and is expected to return a list of errors, warnings and notices
+  (see: :php:`\Cobweb\Svconnector\Service\ConnectorBase::checkConfiguration()`
+  for the structure of the return array.
+
+  Warnings and notices are not considered blocking.
+
+  Input
+    array of parameters
+
+  Output
+    array of errors, warnings or notices
+
+
+logConfigurationCheck()
+  This method is used to cleanly report all configuration issues by logging them
+  using the TYPO3 logging API. This is not automatically done by :php:`checkConfiguration()`
+  because some other form of action might be taken when services are used in
+  third-party code.
+
+  When developing your own service, you should call this method right after
+  :php:`checkConfiguration()` in the :php:`query()` method.
+
+  Input
+    array of errors, warnings or notices
+
+  Output
+    void
+
+
 query()
   Strictly speaking this method is not part of the API, since it is
   protected and thus not designed to be called directly. It is designed
