@@ -1,3 +1,7 @@
+2020-04-12 Francois Suter (Idéative)  <typo3@ideative.ch>
+
+	* Add API for reporting about configuration issues, resolves #18
+
 2020-04-10 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Ensure compatibility with TYPO3 10
